Change avantar in examples

--- a/examples/boxes.html
+++ b/examples/boxes.html
@@ -18,13 +18,13 @@
     <aside id="menu" class="dark absolute">
         <header>
             <div class="session">
-                <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="avatar"/>
+                <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="avatar"/>
                 <strong class="text">logged in as <a href="#" class="active">soyjavi</a></strong>
                 <button data-box="close" class="small tiny secondary">close</button>
             </div>
         </header>
         <article class="scroll">
-            <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="avatar margin"/>
+            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="avatar margin"/>
             <nav data-menu="slidus" class="text center bold">
                 <a href="#" class="active">item .active<small>(100)</small></a>
                 <a href="#">item<small>(3)</small></a>
@@ -41,7 +41,7 @@
             <button class="small tiny secondary float left" data-tuktuk-box="menu">Menu</button>
         </header>
         <article class="scroll">
-            <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="avatar margin"/>
+            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="avatar margin"/>
             <h4 class="margin_left margin_bottom text bold inline">Javi Jiménez</h4>
             <span class="margin_left tag bck theme inline text bold">pro</span>
             <hr/>
