--- a/examples/profile.html
+++ b/examples/profile.html
@@ -29,7 +29,7 @@
 <section class="padding bck dark">
     <div class="row text color white">
         <div class="column_3">
-            <img src="http://a0.twimg.com/profile_images/1520948197/la_foto.JPG" class="padding responsive rounded" />
+            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="padding responsive rounded" />
         </div>
         <div class="column_9 ">
             <h1 class="text bold color theme margin_top margin_bottom">Javi Jimenez</h1>
