--- a/examples/landing.html
+++ b/examples/landing.html
@@ -114,7 +114,7 @@ workflow of web designers. It’s more than just a slogan for us.
 
     <div class="row text center">
        <div class="offset_4 column_4 padding">
-            <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="responsive rounded margin_bottom"/>
+            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="responsive rounded margin_bottom"/>
             <br/>
             <a href="https://twitter.com/soyjavi" class="twitter-follow-button " data-show-count="false" data-dnt="true">Follow @soyjavi</a>
            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
