--- a/examples/profile.html
+++ b/examples/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>tuktuk - Profile Example</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- <link rel="stylesheet" href="includes/css/base.css"> -->
@@ -84,8 +84,5 @@
         <div class="column_3 bck light text center margin_bottom padding_top padding_bottom">thumb</div>
     </div>
 </section>
-
-
-
 </body>
 </html>
