Changes in landing

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <a href="http://tapquo.com" class="tapquo"><img src="http://cdn.tapquo.com/images/tapquo_circle.png"></a>
             </div>
             <nav class="column_4 text right color secondary">
-                <a href="https://github.com/soyjavi/package-monocle/archive/1.0.2.zip" class="icon download"></a>
+                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.5.0.zip" class="icon download"></a>
                 <a href="https://github.com/soyjavi/tuktuk" class="icon github"></a>
-                <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Ftuktuk.tapquo.com%2F&text=Tuktuk%20-%20Simple%20(but%20powerful)%20RWD%20Framework&tw_p=tweetbutton&url=http%3A%2F%2Ftuktuk.tapquo.com%2F" class="icon twitter"></a>
+                <a href="https://twitter.com/tapquo" target="_blank" class="icon twitter"></a>
             </nav>
         </div>
     </header>
@@ -78,7 +78,7 @@
 
         <div class="row">
             <div class="offset_2 column_4">
-                <a href="https://github.com/soyjavi/package-quojs/archive/0.5.zip" class="button large anchor "><span class="icon download"></span>Download .Zip File</a>
+                <a href="https://github.com/soyjavi/package-tuktuk/archive/0.5.0.zip" class="button large anchor "><span class="icon download"></span>Download .Zip File</a>
             </div>
             <div class="column_4">
                 <a href="https://github.com/soyjavi/tuktuk" class="button large anchor secondary"><span class="icon github"></span>Source on Github</a>
@@ -631,7 +631,7 @@
             </div>
             <div class="column_3">
                 <p class="text bold big">Need some help?</p>
-                For quick answers or help <a href="https://groups.google.com/forum/#!forum/quojs" class="text normal">write us</a>
+                For quick answers or help <a href="https://twitter.com/soyjavi" target="_blank" class="text normal">follow me</a>
             </div>
         </div>
     </footer>
