--- a/examples/boxes.html
+++ b/examples/boxes.html
@@ -38,8 +38,10 @@
 
     <aside class="light">
         <header class="text center">
-            <button class="tiny secondary icon cog inline left" data-tuktuk-box="menu"></button>
-            <h2 class="text bold inline">tuk<span class="text thin">tuk</span></h2>
+            <div class="inline left">
+                <button class="tiny secondary icon cog" data-tuktuk-box="menu"></button>
+            </div>
+            <h2 class="text bold ">tuk<span class="text thin">tuk</span></h2>
         </header>
         <article class="scroll">
             <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="avatar margin"/>
@@ -149,7 +151,7 @@
         // TukTuk.Modal.show("right");
         TukTuk.Box.show("menu");
 
-        TukTuk.Modal.loading();
+        // TukTuk.Modal.loading();
     </script>
 </body>
 </html>
