--- a/examples/boxes.html
+++ b/examples/boxes.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../package/widgets/icon/tuktuk.icon.css">
     <link rel="stylesheet" href="../package/widgets/boxes/tuktuk.boxes.css">
     <link rel="stylesheet" href="../package/widgets/boxes/tuktuk.boxes.theme.css">
+    <link rel="stylesheet" href="../package/widgets/tip/tuktuk.tip.css">
 </head>
 <body data-tuktuk="boxes">
 
@@ -38,7 +39,7 @@
 
     <aside class="light">
         <header class="text center">
-            <div class="inline left">
+            <div class="inline on_left">
                 <button class="tiny secondary icon cog" data-tuktuk-box="menu"></button>
             </div>
             <h2 class="text bold ">tuk<span class="text thin">tuk</span></h2>
@@ -55,7 +56,7 @@
             </nav>
             <hr/>
             <nav class="margin" data-button="relationships">
-                <button data-tuktuk-modal="modal"><span class="icon users"></span>Following</button>
+                <button data-tuktuk-modal="modal" data-tip="Push to follow user"><span class="icon users"></span>Following</button>
                 <button class="secondary">List</button>
             </nav>
             <hr>
@@ -80,12 +81,12 @@
 
     <section>
         <header>
-            <nav class="left text bold" data-filter="slidus">
+            <nav class="on_left text bold" data-filter="slidus">
                 <a href="#" class="active">item.active<small>small</small></a>
                 <a href="#">item</a>
             </nav>
 
-            <nav class="right">
+            <nav class="on_right">
                 <button class="tiny secondary">tiny</button>
                 <button class="small secondary">small</button>
                 <button class="tiny secondary icon twitter">@soyjavi</button>
@@ -104,14 +105,14 @@
             <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat nesciunt inventore culpa modi. Explicabo maiores vel inventore eius iusto dolorum quia autem doloribus ut repellat voluptate rerum veniam natus recusandae.</h6>
         </article>
         <footer>
-            <nav class="left text bold" data-filter="slidus">
+            <nav class="on_left text bold" data-filter="slidus">
                 <a href="#" class="active">SHOTS<small>(100)</small></a>
                 <a href="#">PROJECTS<small>(3)</small></a>
                 <a href="#">LIKES<small>(192)</small></a>
                 <a href="#">TAGS<small>(160)</small></a>
             </nav>
 
-            <nav class="right">
+            <nav class="on_right">
                 <button class="small">Following</button>
                 <button class="small secondary">List</button>
             </nav>
@@ -121,7 +122,7 @@
     <div id="modal" data-tuktuk="modal" class="column_6">
         <header>
             <h5 class="text bold inline">That's all, folks</h5>
-            <button data-modal="close" class="button tiny  right inline icon cancel"></button>
+            <button data-modal="close" class="button tiny  on_right inline icon cancel"></button>
 
         </header>
         <article class="text -small -big">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum assumenda aperiam nobis quam earum nihil veritatis modi possimus blanditiis perferendis obcaecati voluptatibus fuga eaque ad et atque nostrum porro expedita!</article>
@@ -133,7 +134,7 @@
     <div id="right" data-tuktuk="modal" class="side column_6">
         <header>
             <h3 class="inline">Menu in ...</h3>
-            <nav class="inline right">
+            <nav class="inline on_right">
                 <button class="small secondary" data-modal="close">Close</button>
             </nav>
         </header>
