--- a/examples/landing.html
+++ b/examples/landing.html
@@ -13,7 +13,7 @@
 </head>
 <body class="text thin">
 <!-- ========================== HEADER ========================== -->
-<header class="bck margin_top margin_bottom">
+<header class="bck margin-top margin-bottom">
     <div class="row">
         <div class="column_3">
             <a href="http://tuktuk.tapquo.com" class="logo text bold color theme">tuk<span class="text book">tuk</span></a>
@@ -47,7 +47,7 @@
 
 <!-- ========================== Features ========================== -->
 <section class="bck theme padding">
-    <div class="row text center margin_bottom">
+    <div class="row text center margin-bottom">
         <div class="column_8 offset_2">
             <h1 class="text book color white">Built for designers and agencies</h1>
             <h4>
@@ -57,7 +57,7 @@ workflow of web designers. It’s more than just a slogan for us.
         </div>
     </div>
 
-    <div class="row text center color white book margin_top">
+    <div class="row text center color white book margin-top">
         <div class="column_3">
             <h5 class="text bold">Smooth workflows</h5>
             <p>Create accounts with limited interaction from your clients. Send them a link to enter their payment info, and they’re good to go.</p>
@@ -96,7 +96,7 @@ workflow of web designers. It’s more than just a slogan for us.
         <div class="column_10 offset_1">
             <h2 class="text bold color theme">We're launching soon</h2>
             <h4 class="text book italic">Join tuk<span class="text bold">tuk</span></h4>
-            <a href="#" class="button large margin_top">Yes, please!</a>
+            <a href="#" class="button large margin-top">Yes, please!</a>
         </div>
     </div>
 </section>
@@ -114,7 +114,7 @@ workflow of web designers. It’s more than just a slogan for us.
 
     <div class="row text center">
        <div class="offset_4 column_4 padding">
-            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="responsive rounded margin_bottom"/>
+            <img src="http://cdn.tapquo.com/photos/javi_color.jpg" class="responsive rounded margin-bottom"/>
             <br/>
             <a href="https://twitter.com/soyjavi" class="twitter-follow-button " data-show-count="false" data-dnt="true">Follow @soyjavi</a>
            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
